# scoutapps

./: .gitignore
docs/SquirrelScout/: DkCoderMigration.md
src/SonicScout_Setup/: ScoutBackend.ml
us/SonicScoutAndroid/app/src/main/java/com/example/squirrelscout_scouter/ui/viewmodels/: RawMatchDataUiState.java  RawMatchDataUiStateSerde.java  ScoutingSessionViewModel.java
us/SonicScoutAndroid/app/src/main/res/layout/: teleop_scouting.xml
us/SonicScoutAndroid/dependencies/: CMakeLists.txt
us/SonicScoutBackend/: .gitignore  CMakePresets.json  README.md
us/SonicScoutBackend/dependencies/: CMakeLists.txt
us/SonicScoutBackend/src/SonicScout_MainCLI/: CMakeLists.txt  SquirrelScout_cli.ml
us/SonicScoutBackend/src/SonicScout_ManagerApp/: CMakeLists.txt
us/SonicScoutBackend/src/SonicScout_Objs/: CMakeLists.txt
us/SonicScoutBackend/src/SonicScout_ObjsLib/: CMakeLists.txt
us/SonicScoutBackend/src/SonicScout_Std/: CMakeLists.txt  Schema.java
us/SonicScoutBackend/tests/SonicScout_Units/: CMakeLists.txt
us/SonicScoutBackend/tests/fast-target/: CMakeLists.txt
us/SonicScoutBackend/tests/inspect-target/: CMakeLists.txt
